@@ -1,7 +1,5 @@
 ## Process this file with automake to produce Makefile.in
 
-AUTOMAKE_OPTIONS = dist-bzip2
-
 # all man files that should be installed
 man_MANS = dlsdump.1 gigdump.1 gigextract.1 rifftree.1
 # include man files into distribution (because they're not by default)
