@@ -1,3 +1,9 @@
+Version CVS HEAD (?)
+
+  * packaging changes:
+    - require automake (>= 1.5) for 'make -f Makefile.cvs'
+      (mandatory for 'dist-bzip2' automake option)
+
 Version 2.0.1 (12 Jun 2005)
 
   * packaging changes:
